non-msrv-tests/tests/ui/use_case.stderr
error: derive-where doesn't support empty items, as this can already be handled by standard `#[derive(..)]`
 --> tests/ui/use_case.rs:4:1
  |
4 | / #[derive_where(Clone)]
5 | | struct StructEmpty {}
  | |_____________________^

error: derive-where doesn't support empty items, as this can already be handled by standard `#[derive(..)]`
 --> tests/ui/use_case.rs:8:1
  |
8 | / #[derive_where(Clone)]
9 | | struct TupleEmpty();
  | |____________________^

error: derive-where doesn't support empty items, as this can already be handled by standard `#[derive(..)]`
  --> tests/ui/use_case.rs:12:1
   |
12 | / #[derive_where(Clone)]
13 | | struct Unit;
   | |____________^

error: derive-where doesn't support empty items, as this can already be handled by standard `#[derive(..)]`
  --> tests/ui/use_case.rs:16:1
   |
16 | / #[derive_where(Clone)]
17 | | struct UnionEmpty {}
   | |____________________^

error: derive-where doesn't support items without generics, `skip` attributes or `enum`s implementing `Default`, as this can already be handled by standard `#[derive(..)]`
  --> tests/ui/use_case.rs:20:1
   |
20 | / #[derive_where(Clone)]
21 | | struct StructNone(u8);
   | |______________________^

error: derive-where doesn't support items without generics, `skip` attributes or `enum`s implementing `Default`, as this can already be handled by standard `#[derive(..)]`
  --> tests/ui/use_case.rs:24:1
   |
24 | / #[derive_where(Clone)]
25 | | enum EnumNone {
26 | |     A(u8),
27 | | }
   | |_^
